About Program && Navigation Done.

--- a/res/layout/activity_login_new.xml
+++ b/res/layout/activity_login_new.xml
@@ -143,7 +143,8 @@
                 android:layout_weight="1"
                 android:background="@color/textview_background"
                 android:padding="6dp"
-                android:text="@string/login_try" />
+                android:text="@string/login_try"
+                android:visibility="gone" />
 
         </LinearLayout>
 
