Talking Listening layout.

--- a/res/layout/fragment_listening_my.xml
+++ b/res/layout/fragment_listening_my.xml
@@ -15,5 +15,38 @@
 
     </ListView>
 
+    <FrameLayout
+        android:id="@+id/aa"
+        android:layout_width="fill_parent"
+        android:layout_height="70dp"
+        android:layout_gravity="bottom"
+        android:animateLayoutChanges="true"
+        android:background="@color/Banana_White" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_launcher_shadow" />
+
+            <TextView
+                android:id="@+id/server_talk"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="TextView"
+                android:textColor="@color/Banana_Setting_Gray" />
+        </LinearLayout>
+    </FrameLayout>
+
 </FrameLayout>
 
