--- a/res/layout/fragment_about_program.xml
+++ b/res/layout/fragment_about_program.xml
@@ -43,7 +43,6 @@
                         android:paddingRight="10dp"
                         android:text="@string/about_program_Version"
                         android:textColor="@color/Banana_Setting_Gray"
-                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -54,7 +53,8 @@
                         android:text="@string/about_program_VersionTextView"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/Banana_Setting_Gray"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -69,7 +69,6 @@
                         android:paddingRight="10dp"
                         android:text="@string/about_program_teamname"
                         android:textColor="@color/Banana_Setting_Gray"
-                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -80,7 +79,7 @@
                         android:text="@string/about_program_AutoBanana"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/Banana_Setting_Gray"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -92,7 +91,6 @@
                     android:paddingRight="10dp"
                     android:text="@string/about_program_developer"
                     android:textColor="@color/Banana_Setting_Gray"
-                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -111,7 +109,8 @@
                         android:layout_marginTop="5dp"
                         android:text="@string/about_program_develpoer1"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/Banana_Setting_Gray" />
+                        android:textColor="@color/Banana_Setting_Gray"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/about_program_develpoer_textViwer2"
@@ -121,7 +120,8 @@
                         android:layout_marginTop="5dp"
                         android:text="@string/about_program_develpoer2"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/Banana_Setting_Gray" />
+                        android:textColor="@color/Banana_Setting_Gray"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/about_program_develpoer_textViwer3"
@@ -131,7 +131,8 @@
                         android:layout_marginTop="5dp"
                         android:text="@string/about_program_develpoer3"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/Banana_Setting_Gray" />
+                        android:textColor="@color/Banana_Setting_Gray"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -147,7 +148,6 @@
                         android:paddingRight="10dp"
                         android:text="@string/about_program_updatetitile"
                         android:textColor="@color/Banana_Setting_Gray"
-                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -158,7 +158,8 @@
                         android:text="@string/about_program_updatetime"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/Banana_Setting_Gray"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -175,8 +176,7 @@
                         android:gravity="center"
                         android:padding="10dp"
                         android:text="@string/about_program_speaktouser"
-                        android:textColor="@color/Black"
-                        android:textSize="20sp" />
+                        android:textColor="@color/Black" />
 
                 </LinearLayout>
 
