--- a/res/layout/fragment_talking_my.xml
+++ b/res/layout/fragment_talking_my.xml
@@ -1,33 +1,66 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/a"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:animateLayoutChanges="true"
     android:background="@color/Banana_Gray"
+    android:orientation="vertical"
     android:padding="2dp"
     tools:context="com.example.secrettalk5.Listening_MyFragment$PlaceholderFragment" >
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/Talking_ListView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:layout_above="@+id/button_talking"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/aa"
+        android:layout_weight="2"
+        android:background="@color/Banana_Gray" >
+    </ListView>
 
-        <ListView
-            android:id="@+id/Talking_ListView1"
+    <Button
+        android:id="@+id/button_talking"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@color/button_bakcground"
+        android:text="@string/Talking_talk_button" />
+
+    <FrameLayout
+        android:id="@+id/aa"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:animateLayoutChanges="true"
+        android:background="@color/Banana_White" >
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/Banana_Gray" >
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp" >
 
-        </ListView>
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_launcher_shadow" />
 
-        <Button
-            android:id="@+id/button_talking"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/button_bakcground"
-            android:text="@string/Talking_talk_button" />
+            <TextView
+                android:id="@+id/server_talk"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="TextView"
+                android:textColor="@color/Banana_Setting_Gray" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-</FrameLayout>
+    </FrameLayout>
+
+</RelativeLayout>
