--- a/res/layout/fragment_navigation.xml
+++ b/res/layout/fragment_navigation.xml
@@ -114,7 +114,7 @@
                     android:orientation="vertical" >
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/bulletinboard_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
