--- a/res/layout/fragment_register_new.xml
+++ b/res/layout/fragment_register_new.xml
@@ -132,7 +132,7 @@
             android:layout_weight="1" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/bulletinboard_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="10dp"
