--- a/res/layout/fragment_bulletinboard.xml
+++ b/res/layout/fragment_bulletinboard.xml
@@ -8,31 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/TextView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="15dp"
-                android:background="@color/Banana_light"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="@string/Bulletinboard_title"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/Black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,8 +20,6 @@
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
                 android:gravity="center"
                 android:padding="5dp"
                 android:text="@string/Bulletinboard_serverMessage"
@@ -55,8 +30,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:background="@color/Banana_Setting_Gray_light"
             android:orientation="vertical" >
 
@@ -92,6 +65,19 @@
                 android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:textColor="@color/Blue" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/logo_secrettalk_banner" />
 
         </LinearLayout>
 
