--- a/res/layout/fragment_listening_my.xml
+++ b/res/layout/fragment_listening_my.xml
@@ -21,7 +21,7 @@
         android:layout_height="70dp"
         android:layout_gravity="bottom"
         android:animateLayoutChanges="true"
-        android:background="@color/Banana_White" >
+        android:background="@color/Banana_Setting_Gray_light" >
 
         <LinearLayout
             android:layout_width="match_parent"
