--- a/res/layout/fragment_talking_my.xml
+++ b/res/layout/fragment_talking_my.xml
@@ -36,7 +36,7 @@
         android:layout_height="60dp"
         android:layout_above="@id/button_talking"
         android:animateLayoutChanges="true"
-        android:background="@color/Banana_White" >
+        android:background="@color/Banana_Setting_Gray_light" >
 
         <LinearLayout
             android:layout_width="match_parent"
