加 new article 功能 with 小魏

--- a/res/layout/fragment_setting_my.xml
+++ b/res/layout/fragment_setting_my.xml
@@ -81,7 +81,7 @@
                 android:background="@color/Banana_Setting_Gray_light" >
 
                 <TextView
-                    android:id="@+id/about_version"
+                    android:id="@+id/content_setting"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
