--- a/res/layout/activity_login_new.xml
+++ b/res/layout/activity_login_new.xml
@@ -47,7 +47,7 @@
             android:layout_weight="1.8" >
 
             <TextView
-                android:id="@+id/about_version"
+                android:id="@+id/content_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="10dp"
