--- a/res/layout/fragment_about_program.xml
+++ b/res/layout/fragment_about_program.xml
@@ -63,7 +63,7 @@
                     android:layout_marginBottom="8dp" >
 
                     <TextView
-                        android:id="@+id/about_version"
+                        android:id="@+id/content_setting"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingRight="10dp"
